meta tags for previewing

--- a/graph/index.html
+++ b/graph/index.html
@@ -2,6 +2,13 @@
 
 <head>
     <title>Three.js Graph</title>
+    <meta charset="utf-8">
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Graph" />
+    <meta property="og:description" content="A 3D graph made in Three.js" />
+    <meta property="og:image" content="http://JarettRoman.github.io/images/graph.png"/>
+
+
     <style>
         body {
             margin: 0;
