--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
 <html>
-    oh deer
+<h1>Watch out!</h1>
+<p>
+	There are malevolent forces outside the house! Be careful!
+	But things are alright. Be safe!
+</p>
+
 </html>
