--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
-<html>
-<h1>Watch out!</h1>
-<p>
-	There are malevolent forces outside the house! Be careful!
-	But things are alright. Be safe!
-</p>
+
+<head>
+	<link rel="stylesheet" href="css/main.css">
+	<title>Watch Out For Trouble...</title>
+</head>
+<html lang="en">
+<div class="header">
+	<h1>Watch out!</h1>
+</div>
+<ul class="article-list">
+	<li>
+		5/29
+		<a href="/pages/one-year-out.html">One Year Out</a>
+	</li>
+</ul>
 
 </html>
