5-29-24 one-year-out proofread edits

--- a/pages/one-year-out.html
+++ b/pages/one-year-out.html
@@ -44,8 +44,8 @@
 		about what I'd do after I was completely done with school. Getting a master's degree didn't seem
 		too financially rewarding once I got my bachelor's. However, any other goal I had in mind fell
 		to the wayside. The question of what I truly wanted to do was shelved. The priority was to get
-		money. So I put my head down into the code and learned enough to work. I only got applied to jobs
-		so I could further my career. Out the gate after graduation was said and done was to find a
+		money. So I put my head down into the code and learned enough to work. I only applied to jobs
+		so I could further my career. Out the gate, after graduation, the goal was to find a
 		junior engineering position, which I did in a year.
 	</p>
 
