colors and more responsiveness

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
 </head>
 <html lang="en">
 <div class="header">
-	<h1>Watch out!</h1>
+	<h1>Watch Out!</h1>
 </div>
 <ul class="article-list">
 	<li>
-		5/29
-		<a href="/pages/one-year-out.html">One Year Out</a>
+		<a href="/pages/one-year-out.html">
+			<div>
+				5/29 - One Year Out
+			</div>
+		</a>
 	</li>
 </ul>
 
