--- a/pages/one-year-out.html
+++ b/pages/one-year-out.html
@@ -3,6 +3,7 @@
 <head>
 	<link rel="stylesheet" href="../css/main.css">
 	<title>5/29/24 - One Year Out</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <html lang="en">
 <div class="header">
