--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<link rel="stylesheet" href="css/main.css">
 	<title>Watch Out For Trouble...</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <html lang="en">
 <div class="header">
