--- a/pages/one-year-out.html
+++ b/pages/one-year-out.html
@@ -11,7 +11,9 @@
 	<p>5/29/24</p>
 </div>
 <nav class="nav-container">
-	<div><a href="../index.html">Home</a></div>
+	<div>
+		<a href="../index.html">Home</a>
+	</div>
 	<!-- <div>Search</div>
 	<div>Logout</div> -->
 </nav>
