fixes and favicon

--- a/pages/one-year-out.html
+++ b/pages/one-year-out.html
@@ -109,8 +109,7 @@
 		</p>
 
 		<p>
-			I didn't care. I cared about getting the job and doing just enough to be paid. But I didn't care.
-			Didn't care about the job. Didn't care about the profession aside from my own reputation.
+			I didn't care as long as I was paid.
 		</p>
 
 		<p>
