--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
 	<link rel="stylesheet" href="css/main.css">
+	<link href="favicon.ico" rel="icon" type="image/x-icon">
 	<title>Watch Out For Trouble...</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
