--- a/pages/one-year-out.html
+++ b/pages/one-year-out.html
@@ -12,7 +12,7 @@
 </div>
 <nav class="nav-container">
 	<div>
-		<a href="../index.html">Home</a>
+		<a href="/">Home</a>
 	</div>
 	<!-- <div>Search</div>
 	<div>Logout</div> -->
