more responsive fixes

--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 <div class="header">
 	<h1>Watch Out!</h1>
 </div>
-<ul class="article-list">
-	<li>
-		<a href="/pages/one-year-out.html">
-			<div>
-				5/29 - One Year Out
-			</div>
-		</a>
-	</li>
-</ul>
+<div class="article-list-container">
+	<ul class="article-list">
+		<li>
+			<a href="/pages/one-year-out.html">
+				<div>
+					5/29 - One Year Out
+				</div>
+			</a>
+		</li>
+	</ul>
+</div>
 
 </html>
