6/3 wordpress local setup and assets

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 <div class="article-list-container">
 	<ul class="article-list">
 		<li>
+			<a href="/pages/setting-up-wordpress-locally.html">
+				<div>
+					6/3 - Wordpress - Local Setup
+				</div>
+			</a>
+		</li>
+		<li>
 			<a href="/pages/one-year-out.html">
 				<div>
 					5/29 - One Year Out
