--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link href="favicon.ico" rel="icon" type="image/x-icon">
 	<title>Watch Out For Trouble...</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Author: Jarett Roman">
 </head>
 <html lang="en">
 <div class="header">
