--- a/pages/one-year-out.html
+++ b/pages/one-year-out.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" href="../css/main.css">
 	<title>5/29/24 - One Year Out</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Author: Jarett Roman, Post: One Year Out">
 </head>
 <html lang="en">
 <div class="header">
