styling updates and type corrections

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<li>
 			<a href="/pages/setting-up-wordpress-locally.html">
 				<div>
-					6/3 - Wordpress - Local Setup
+					6/3 - WordPress - Local Setup
 				</div>
 			</a>
 		</li>
